# mozjpeg_min_reproducible

./: Cargo.toml  build.rs
src/: main.rs  test.c
