[package]
name = "repoducible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mozjpeg-sys = { version = "1.0.6", features = ["jpeg80_abi"] }
# mozjpeg-sys = { path = "../mozjpeg-sys/", features = ["jpeg80_abi"] }
mozjpeg-sys = { git = "https://github.com/kornelski/mozjpeg-sys", features = ["jpeg80_abi"] }

[build-dependencies]
cc = { version = "1.0.79", features = ["parallel"] }
